cabal-version: 2.4
name: box-csv
version: 0.0.3
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/box-csv#readme
bug-reports: https://github.com/tonyday567/box-csv/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/box-csv

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    attoparsec >= 0.13,
    base >=4.7 && <5,
    box ^>= 0.7,
    generic-lens,
    lens >= 4.19 && < 5,
    scientific >= 0.3 && < 0.4,
    text >= 1.2 && < 1.3,
    time >= 1.9 && < 1.10,
  exposed-modules:
    Box.Csv
  other-modules:
  default-language: Haskell2010
