cabal-version: 2.4
name: online-csv
version: 0.0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/online-csv#readme
bug-reports: https://github.com/tonyday567/online-csv/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/online-csv

executable online-csv
  main-is: online-csv.hs
  hs-source-dirs: app
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , numhask-prelude >= 0.3.3
  default-language: Haskell2010

library
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    base >=4.7 && <5
    , attoparsec
    , blaze-html
    , box
    , foldl
    , generic-lens
    , lens
    , managed
    , protolude
    , text
    , pandoc
    , pandoc-types
    , containers
    , transformers
    , streaming
    , scientific
    , text-format
  exposed-modules:
    Data.Csv
    Data.Csv.Core
  other-modules:
  default-language: Haskell2010
