cabal-version: 3.0
name: online-csv
version: 0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/online-csv#readme
bug-reports: https://github.com/tonyday567/online-csv/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/online-csv

library
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    base >=4.7 && <5
    , attoparsec
    , box >= 0.4 && < 0.5
    , foldl
    , generic-lens
    , lens
    , text
    , scientific
    , text-format
    , numhask-prelude >= 0.5 && < 0.6
  exposed-modules:
    Data.Csv
  other-modules:
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , doctest
    , numhask-prelude >= 0.5 && < 0.6
  default-language: Haskell2010
